--- a/style.css
+++ b/style.css
@@ -18,6 +18,14 @@ html {
 	font-size: 1.3rem;
 	background-color: whitesmoke;
 	background-color: #747373;
+	background-image: url('https://creativesilhouettes.ca/wp-content/uploads/2020/10/round_geometric-pattern.jpg');
+	background-image: url('https://miro.medium.com/v2/resize:fit:1200/1*H1CtfhfL_7RLiKcHyN-1hw.jpeg');
+	background-image: url("data:image/svg+xml,<svg id='patternId' width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><defs><pattern id='a' patternUnits='userSpaceOnUse' width='41.5' height='40' patternTransform='scale(2) rotate(0)'><rect x='0' y='0' width='100%' height='100%' fill='%23ffffffff'/><path d='M46.231 19.999a5.937 7.48 0 01-5.937 7.48A5.937 7.48 0 0134.357 20a5.937 7.48 0 015.937-7.48 5.937 7.48 0 015.937 7.48zm-40.421 0a5.937 7.48 0 01-5.937 7.48A5.937 7.48 0 01-6.064 20a5.937 7.48 0 015.937-7.48 5.937 7.48 0 015.937 7.48zm20.21 20.285a5.937 7.48 0 01-5.937 7.48 5.937 7.48 0 01-5.936-7.48 5.937 7.48 0 015.936-7.48 5.937 7.48 0 015.937 7.48zm0-40.57a5.937 7.48 0 01-5.937 7.48 5.937 7.48 0 01-5.936-7.48 5.937 7.48 0 015.936-7.48 5.937 7.48 0 015.937 7.48zM-5.732 46.942c1.676-.944 3.556-1.6 5.478-1.587 1.924.011 3.796.69 5.463 1.653 1.668.962 3.156 2.202 4.637 3.434 1.48 1.233 2.97 2.471 4.641 3.428 1.67.957 3.547 1.627 5.47 1.627 1.924 0 3.8-.67 5.47-1.627s3.161-2.195 4.642-3.428c1.48-1.232 2.968-2.472 4.636-3.434 1.667-.963 3.54-1.642 5.463-1.653 1.922-.012 3.802.643 5.479 1.587V33.628c-1.677.944-3.557 1.6-5.479 1.587-1.923-.011-3.796-.69-5.463-1.653-1.668-.962-3.156-2.202-4.636-3.434-1.48-1.233-2.971-2.471-4.642-3.428-1.67-.957-3.546-1.627-5.47-1.627-1.923 0-3.8.67-5.47 1.627s-3.161 2.195-4.641 3.428c-1.48 1.232-2.97 2.472-4.637 3.434-1.667.963-3.54 1.641-5.463 1.653-1.922.012-3.802-.643-5.478-1.587zM45.647-6.943c-1.677.944-3.557 1.6-5.479 1.587-1.923-.011-3.796-.69-5.463-1.653-1.668-.962-3.156-2.202-4.636-3.434-1.48-1.233-2.971-2.471-4.642-3.428-1.67-.957-3.546-1.627-5.47-1.627-1.923 0-3.8.67-5.47 1.627s-3.161 2.195-4.641 3.428c-1.48 1.232-2.97 2.472-4.637 3.434-1.667.963-3.54 1.642-5.463 1.653-1.922.012-3.802-.643-5.478-1.587V6.372c1.676-.944 3.556-1.6 5.478-1.587 1.924.012 3.796.69 5.463 1.653C6.877 7.4 8.365 8.64 9.846 9.872c1.48 1.233 2.97 2.471 4.641 3.428 1.67.957 3.547 1.627 5.47 1.627 1.924 0 3.8-.67 5.47-1.627s3.161-2.195 4.642-3.428c1.48-1.232 2.968-2.472 4.636-3.434 1.667-.963 3.54-1.642 5.463-1.653 1.922-.012 3.802.643 5.479 1.587z' transform='translate(0.75,0)' stroke-width='1' stroke='none' fill='%23ff5400ff'/></pattern></defs><rect width='800%' height='800%' transform='translate(0,-42)' fill='url(%23a)'/></svg>");
+	background-color: #ffffff;
+	opacity: 0.8;
+	background: radial-gradient(circle, transparent 20%, #ffffff 20%, #ffffff 80%, transparent 80%, transparent), radial-gradient(circle, transparent 20%, #ffffff 20%, #ffffff 80%, transparent 80%, transparent) 52.5px 52.5px, linear-gradient(#ff5400 4.2px, transparent 4.2px) 0 -2.1px, linear-gradient(90deg, #ff5400 4.2px, #ffffff 4.2px) -2.1px 0;
+	background-size: 105px 105px, 105px 105px, 52.5px 52.5px, 52.5px 52.5px;
+	background-repeat: repeat;
 	color: var(--Kelp);
 	display: flex;
 	align-items: center;
@@ -63,6 +71,8 @@ button:hover , input[type=submit]:hover {
 .center_div {
 	width: 600px;
 	background-color: var(--Venice);
+	background-color: rgb(83, 108, 182, .4);
+	backdrop-filter: blur(10px);
 	border-radius: 20px;
 	box-shadow: var(--Kelp) -10px 10px 15px;
 }
@@ -114,9 +124,12 @@ button:hover , input[type=submit]:hover {
 
 /* Mobile Design */
 
-@media only screen and (max-width: 600px) {
+@media only screen 
+and (max-width : 800px) {
   html {
-    background-color: lightblue;
+		background-color: lightblue;
+		font-size: 1.3rem;
+		min-width: 550px;
   }
 
 	body {
@@ -126,9 +139,20 @@ button:hover , input[type=submit]:hover {
 		align-items: center;
 	}
 
+	h1 {
+		font-family: Monomakh;
+		font-weight: 700;
+		font-size: 1.5rem;
+		margin: 0;
+		padding-left: 15px;
+		padding-top: 10px;
+		padding-bottom: 5px;
+		color: whitesmoke;
+	}
+
 	.center_div {
-		width: 400px;
-		background-color: var(--Venice);
+		width: 75%;
+		min-width: 300px;
 		border-radius: 20px;
 		box-shadow: var(--Kelp) -10px 10px 15px;
 	}
